--- a/1-analyses/fold-stats/folds.Rmd
+++ b/1-analyses/fold-stats/folds.Rmd
@@ -151,18 +151,15 @@ write.csv(stats, file = "stats.csv", row.names = FALSE)
 stats
 ```
 
-## Plot proportion of fold types (bar plot)
+## Plot count of fold types (bar plot)
 
-```{r plot-percentage-events-bar}
+```{r plot-count-fold-type}
 
 ggplot(folds, aes(Genotype, fill = Type)) +
-  geom_bar(alpha = 0.5, position = position_fill(reverse = TRUE), stat = "count") +
-  labs(x = "genotype", y = "fold type proportion") +
-  #geom_bar(position = position_stack(reverse = TRUE), stat = "count") +
-  #labs(x = "genotype", y = "folds by type") +
+  geom_bar(alpha = 0.5, position = position_stack(reverse = TRUE), stat = "count") +
+  labs(x = "genotype", y = "folds by type") +
   facet_grid(cols = vars(Stock), scales = "free") +
   scale_fill_manual(values=c("#56b4e9", "#e69f03")) +
-  scale_color_manual(values=c("#56b4e9", "#e69f03")) +
   theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 15),
         legend.title = element_text(size = 15),
@@ -171,53 +168,48 @@ ggplot(folds, aes(Genotype, fill = Type)) +
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", linewidth = 1)
         )
-
-
-ggsave("2-plots/datalong-bar-pct_event-vs-condition.png", width = 10, height = 4)
-ggsave("2-plots/datalong-bar-pct_event-vs-condition.svg", width = 10, height = 4)
-
+ggsave("0-plots/count-fold-types-per-stock.png", width = 10, height = 4)
+ggsave("0-plots/count-fold-types-per-stock.svg", width = 10, height = 4)
 ```
 
+## Plot proportion of fold types (bar plot)
 
-## Plot individual fold depth by stocks
+```{r plot-proportion-fold-type}
 
-```{r plot-individual-depth}
-
-ggplot(folds, aes(Type)) +
-  geom_histogram()
-
-# Plot stocks separately
-ggplot(folds, aes(Genotype, Length, fill = Genotype, shape = Type)) +
-  geom_boxplot(aes(color = Genotype), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 4)) +
-  labs(x = "mutants", y = "depth") +
-  facet_wrap(~Stock, strip.position = "top") +
+ggplot(folds, aes(Genotype, fill = Type)) +
+  geom_bar(alpha = 0.5, position = position_fill(reverse = TRUE), stat = "count") +
+  labs(x = "genotype", y = "fold type proportion") +
+  facet_grid(cols = vars(Stock), scales = "free") +
   scale_fill_manual(values=c("#56b4e9", "#e69f03")) +
-  scale_color_manual(values=c("#56b4e9", "#e69f03")) +
   theme_classic(base_family = "DejaVu Sans") +
-  theme(text =  element_text(size = 30),
+  theme(text = element_text(size = 15),
+        legend.title = element_text(size = 15),
+        legend.text = element_text(size = 10),
+        axis.text.y=element_blank(),
         strip.background = element_blank(),
-        strip.placement = "outside",
-        strip.text.x = element_text(face = "italic"),
-        panel.background = element_rect(colour = "black", linewidth = 1))
-ggsave("3-plots/depth_facet.png", width = 12, height = 6)
-ggsave("3-plots/depth_facet.svg", width = 12, height = 6)
-
+        panel.background = element_rect(colour = "black", linewidth = 1)
+        )
+ggsave("0-plots/proportion-fold-types-per-stock.png", width = 10, height = 4)
+ggsave("0-plots/proportion-fold-types-per-stock.svg", width = 10, height = 4)
 ```
 
-## Plot overview
+## Plot proportion of fold positions (bar plot)
 
-```{r plot}
-ggplot(folds, aes(Type, fill = Genotype)) +
-  geom_histogram(stat = "count") +
+```{r plot-proportion-fold-position}
+
+ggplot(folds[folds$Fold == TRUE & folds$Type == "EF", ], aes(Genotype, fill = Position)) +
+  geom_bar(alpha = 0.5, position = "fill", stat = "count") +
+  labs(x = "genotype", y = "fold type proportion") +
+  facet_grid(cols = vars(Stock), scales = "free") +
   scale_fill_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  scale_color_manual(values=c("#cc79a7", "#56b4e9", "#e69f03")) +
-  facet_grid(cols = vars(Stock), scales = "free_y") +
-  theme_classic() +
-  theme(text = element_text(size = 35),
+  theme_classic(base_family = "DejaVu Sans") +
+  theme(text = element_text(size = 15),
+        legend.title = element_text(size = 15),
+        legend.text = element_text(size = 10),
+        axis.text.y=element_blank(),
         strip.background = element_blank(),
-        panel.background = element_rect(colour = "black", size=1)
+        panel.background = element_rect(colour = "black", linewidth = 1)
         )
-ggsave("folds-average.png", width = 20, height = 7)
-ggsave("folds-average.svg", width = 20, height = 7)
+ggsave("0-plots/proportion-fold-positions-per-stock.png", width = 10, height = 4)
+ggsave("0-plots/proportion-fold-positions-per-stock.svg", width = 10, height = 4)
 ```
