--- a/1-analyses/evil-twins/evil_twins.Rmd
+++ b/1-analyses/evil-twins/evil_twins.Rmd
@@ -7,7 +7,7 @@ creation: July 23, 2024
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, tidy = TRUE, cache = FALSE)
-knitr::opts_knit$set(root.dir = getwd())
+knitr::opts_knit$set(root.dir = "~/Dropbox/Projects/Cephalic_furrow/7-Manuscript/1-analyses/evil-twins")
 library(ggplot2)
 library(ggbeeswarm)
 library(svglite)
